--- a/index.html
+++ b/index.html
@@ -11,14 +11,35 @@
     
 
 <h1>Site en construction...</h1>
-<input type="text" id="name" value="Prenom">
-<input type="submit" value="envoyer">
 
+<div class="bloc1">
+<h2>Rentrer votre prenom:</h2>
 
+<div class="bloc1">
+<input type='text' id='id1'/>
+<button id="validate">Valider</button>
+<p id="hello"></p>
+</div>
 
 <img  src="R.jpg"  class="photo" alt="" >
 
+
+
+
+    <div class="bloc2">
+    <p>
+        Le site n’est pas tout à fait terminé ! Pour être informé de son 
+        ouverture officielle, n’hésites pas à laisser ton mail
+    </p>
+
+<input type='text' id='id1'/>
+<button id="validate">Valider</button>
+
+    </div>
+
+
+
       
-<script src="script.js"></script>
+<script src="style.js"></script>
 </body>
 </html>
